--- a/Storyboards/Main.storyboard
+++ b/Storyboards/Main.storyboard
@@ -214,6 +214,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="yzN-tY-xyt">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </refreshControl>
                     <connections>
@@ -746,9 +747,9 @@
                                     <constraint firstAttribute="width" constant="167" id="maP-Hy-D5B"/>
                                 </constraints>
                                 <segments>
-                                    <segment title="Table"/>
-                                    <segment title="Simple"/>
                                     <segment title="Links"/>
+                                    <segment title="Text"/>
+                                    <segment title="Table"/>
                                 </segments>
                                 <connections>
                                     <action selector="viewSelectionChanged:" destination="hb6-tD-iwR" eventType="valueChanged" id="amF-eM-yUE"/>
