--- a/HowToController.xib
+++ b/HowToController.xib
@@ -1,11 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HowToController">
@@ -17,36 +14,43 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="1">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xzh-Eg-hgU">
-                    <rect key="frame" x="20" y="63" width="280" height="155"/>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <rect key="frame" x="8" y="8" width="359" height="319"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <accessibility key="accessibilityConfiguration">
                         <accessibilityTraits key="traits" staticText="YES"/>
                     </accessibility>
                     <constraints>
-                        <constraint firstAttribute="height" constant="155" id="0rZ-oY-Pld"/>
+                        <constraint firstAttribute="height" priority="750" constant="319" id="dnA-FG-pOa"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES"/>
                 </textView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yhC-VI-zEJ">
-                    <rect key="frame" x="20" y="226" width="280" height="322"/>
+                    <rect key="frame" x="8" y="335" width="359" height="324"/>
+                    <constraints>
+                        <constraint firstAttribute="height" priority="250" constant="200" id="tJ4-ix-Lf9"/>
+                    </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="xzh-Eg-hgU" secondAttribute="trailing" constant="20" id="6RQ-6X-YUk"/>
-                <constraint firstAttribute="trailing" secondItem="yhC-VI-zEJ" secondAttribute="trailing" constant="20" id="SY5-93-01Y"/>
-                <constraint firstAttribute="bottom" secondItem="yhC-VI-zEJ" secondAttribute="bottom" constant="20" id="YHy-Uy-Ic4"/>
-                <constraint firstItem="yhC-VI-zEJ" firstAttribute="top" secondItem="xzh-Eg-hgU" secondAttribute="bottom" constant="8" id="e1j-PE-LEt"/>
-                <constraint firstItem="yhC-VI-zEJ" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" id="j5t-b6-uQD"/>
-                <constraint firstItem="xzh-Eg-hgU" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" id="lKF-FM-nwA"/>
-                <constraint firstItem="xzh-Eg-hgU" firstAttribute="top" secondItem="1" secondAttribute="top" constant="63" id="qBh-rQ-tZQ"/>
+                <constraint firstItem="yhC-VI-zEJ" firstAttribute="top" secondItem="xzh-Eg-hgU" secondAttribute="bottom" constant="8" id="312-tg-KmX"/>
+                <constraint firstItem="xzh-Eg-hgU" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="8" id="DPS-yo-udX"/>
+                <constraint firstItem="yhC-VI-zEJ" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="FFx-Kr-657"/>
+                <constraint firstAttribute="trailing" secondItem="xzh-Eg-hgU" secondAttribute="trailing" constant="8" id="QBQ-Sj-BdZ"/>
+                <constraint firstItem="xzh-Eg-hgU" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="XXD-VW-ltM"/>
+                <constraint firstItem="yhC-VI-zEJ" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="8" id="XcE-BN-um4"/>
+                <constraint firstAttribute="bottom" secondItem="yhC-VI-zEJ" secondAttribute="bottom" constant="8" id="cNK-sQ-FbB"/>
+                <constraint firstItem="xzh-Eg-hgU" firstAttribute="top" secondItem="1" secondAttribute="top" constant="8" id="h92-qG-Bag"/>
+                <constraint firstAttribute="trailing" secondItem="yhC-VI-zEJ" secondAttribute="trailing" constant="8" id="u89-XF-8Ha"/>
             </constraints>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+            <point key="canvasLocation" x="299.5" y="406.5"/>
         </view>
     </objects>
 </document>
